--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,33 +9,33 @@ layout: compress
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-        <meta name="description" content="Track Chris Robert's promises with StarCitizen Tracker." />
+        <meta name="description" content="Track Chris Robert's promises with StarCitizen Status." />
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>StarCitizen Tracker</title>
+        <title>StarCitizen Status</title>
         <!-- Schema.org markup for Google+ -->
-        <meta itemprop="name" content="StarCitizen Tracker">
-        <meta itemprop="author" content="GOONS">
+        <meta itemprop="name" content="StarCitizen Status">
+        <meta itemprop="author" content="Defter">
         <meta itemprop="datePublished" content="2016-11-10T00:51:00-05:00">
-        <meta itemprop="publisher" content="Derek's Smarties">
-        <meta itemprop="description" content="Track Chris Robert's promises with StarCitizen Tracker.">
-        <meta itemprop="headline" content="StarCitizen Tracker - The Best Way to track his Chris' promises." />
+        <meta itemprop="publisher" content="Defter">
+        <meta itemprop="description" content="Track Chris Robert's promises with StarCitizen Status.">
+        <meta itemprop="headline" content="StarCitizen Status - The Best Way to track his Chris' promises." />
         <meta itemprop="image" content="assets/social-share.png">
         <!-- Twitter Card data -->
         <meta name="twitter:card" content="summary_large_image"/>
         <meta name="twitter:site" content="@StarCitizenTracker">
-        <meta name="twitter:title" content="StarCitizen Tracker">
-        <meta name="twitter:description" content="Track Chris Robert's promises with StarCitizen Tracker.">
+        <meta name="twitter:title" content="StarCitizen Status">
+        <meta name="twitter:description" content="Track Chris Robert's promises with StarCitizen Status.">
         <meta name="twitter:creator" content="@StarCitizenTracker">
         <!-- Twitter summary card with large image must be at least 280x150px -->
         <meta name="twitter:image" content="https://starcitizentracker.github.io/assets/social-share.png">
 
         <!-- Open Graph data -->
-        <meta property="og:title" content="StarCitizen Tracker" />
+        <meta property="og:title" content="StarCitizen Status" />
         <meta property="og:type" content="article" />
         <meta property="og:url" content="https://starcitizentracker.github.io/" />
         <meta property="og:image" content="https://starcitizentracker.github.io/assets/trump-main.jpg" />
-        <meta property="og:description" content="Track Chris Robert's promises with StarCitizen Tracker." />
-        <meta property="og:site_name" content="StarCitizen Tracker" />
+        <meta property="og:description" content="Track Chris Robert's promises with StarCitizen Status." />
+        <meta property="og:site_name" content="StarCitizen Status" />
         <meta property="article:published_time" content="2017-04-17T00:51:00-05:00" />
         <meta property="article:modified_time" content="2017-04-17T00:52:47-05:00" />
         <meta property="article:section" content="Gaming" />
@@ -52,8 +52,8 @@ layout: compress
         <link rel="apple-touch-icon" sizes="144x144"    href="/assets/apple-touch-icon-144x144.png" />
         <link rel="apple-touch-icon" sizes="152x152"    href="/assets/apple-touch-icon-152x152.png" />
         <link rel="apple-touch-icon" sizes="180x180"    href="/assets/apple-touch-icon-180x180.png" />
-        <meta name="apple-mobile-web-app-title"         content="StarCitizen Tracker">
-        <meta name="application-name"                   content="StarCitizen Tracker">
+        <meta name="apple-mobile-web-app-title"         content="StarCitizen Status">
+        <meta name="application-name"                   content="StarCitizen Status">
         <meta name="theme-color"                        content="#ffffff">
         <!-- CSS libraries -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -95,8 +95,8 @@ layout: compress
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand" href="https://starcitizentracker.github.io/">
-                        <b>StarCitizen Tracker</b>
+                    <a class="navbar-brand" href="https://defterai.github.io/StarCitizenStatus/">
+                        <b>StarCitizen Status</b>
                     </a>
 
                 </div>
@@ -125,7 +125,7 @@ layout: compress
 
         <div class="container-fluid">
             <div class="page-header">
-                <h5 class="text-right">Open Source at <a href="https://github.com/StarCitizenTracker/StarCitizenTracker.github.io"> <i class="fa fa-github fa-fw"></i></a></h5>
+                <h5 class="text-right">Open Source at <a href="https://github.com/defterai/StarCitizenStatus"> <i class="fa fa-github fa-fw"></i></a></h5>
             </div>
         </div>
         <footer class="footer">
@@ -138,7 +138,7 @@ layout: compress
                         <p class="text-muted">Inspired by <a href="https://trumptracker.github.io/" target="_blank" rel="nofollow">Trump Tracker</a></p>
                     </div>
                     <div class="col-md-3">
-                        <p class="text-muted"><a href="https://raw.githubusercontent.com/StarCitizenTracker/StarCitizenTracker.github.io/master/_data/data.json" target="_blank" rel="nofollow">Open Data</a></p>
+                        <p class="text-muted"><a href="https://raw.githubusercontent.com/defterai/StarCitizenStatus/master/_data/data.json" target="_blank" rel="nofollow">Open Data</a></p>
 
                     </div>
                     <div class="col-md-3">
