--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -117,17 +117,7 @@ layout: compress
             <div class="container">
                 <div class="row">
                     <div class="col-md-3">
-                        <p class="text-muted">Maintained by <a href="https://forums.somethingawful.com/forumdisplay.php?forumid=212" target="_blank" class="maintainer-name">Bitter EvE Goons</a></p>
-                    </div>
-                    <div class="col-md-3">
-                        <p class="text-muted">Inspired by <a href="https://trumptracker.github.io/" target="_blank" rel="nofollow">Trump Tracker</a></p>
-                    </div>
-                    <div class="col-md-3">
-                        <p class="text-muted"><a href="https://raw.githubusercontent.com/defterai/StarCitizenStatus/master/_data/data.json" target="_blank" rel="nofollow">Open Data</a></p>
-
-                    </div>
-                    <div class="col-md-3">
-                        <p class="text-muted"><a href="https://youtu.be/cRQppqV2LwQ?t=1m21s" target="_blank">Privacy Policy and T&amp;C</a></p>
+                        <p class="text-muted">Maintained by Defter</p>
                     </div>
                 </div>
             </div>
