--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -27,13 +27,13 @@ layout: compress
         <meta name="twitter:description" content="Track Chris Robert's promises with StarCitizen Status.">
         <meta name="twitter:creator" content="@StarCitizenTracker">
         <!-- Twitter summary card with large image must be at least 280x150px -->
-        <meta name="twitter:image" content="https://starcitizentracker.github.io/assets/social-share.png">
+        <meta name="twitter:image" content="https://defterai.github.io/StarCitizenStatus/assets/social-share.png">
 
         <!-- Open Graph data -->
         <meta property="og:title" content="StarCitizen Status" />
         <meta property="og:type" content="article" />
-        <meta property="og:url" content="https://starcitizentracker.github.io/" />
-        <meta property="og:image" content="https://starcitizentracker.github.io/assets/trump-main.jpg" />
+        <meta property="og:url" content="https://defterai.github.io/StarCitizenStatus/" />
+        <meta property="og:image" content="https://defterai.github.io/StarCitizenStatus/assets/trump-main.jpg" />
         <meta property="og:description" content="Track Chris Robert's promises with StarCitizen Status." />
         <meta property="og:site_name" content="StarCitizen Status" />
         <meta property="article:published_time" content="2017-04-17T00:51:00-05:00" />
