--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -132,6 +132,6 @@ layout: compress
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js" integrity="sha256-GcknncGKzlKm69d+sp+k3A2NyQE+jnu43aBl6rrDN2I=" crossorigin="anonymous"></script>
 
         <!-- Custom js -->
-        <script src={{ "/js/main.js" | relative_url }}></script>
+        <script src={{ "js/main.js" | relative_url }}></script>
     </body>
 </html>
